- update minified files & docs fix;

--- a/index.html
+++ b/index.html
@@ -328,16 +328,16 @@ var data = [
 					Use the methods of it elements: <code>addPoint</code>, <code>setPointData</code>, <code>removePoint</code>.
 				</p>
 <pre>
-<strong>// Add a new point { x: 5, y: 7 } (with radius)</strong>
+<strong>// Add a new point { x: 5, y: 7 }</strong>
 myChart.datasets[0].addPoint(5, 7);
 
-<strong>// Add a new point { x: 5, y: 7, r: 4 }</strong>
+<strong>// Add a new point { x: 5, y: 7, r: 4 } (with radius)</strong>
 myChart.datasets[0].addPoint(5, 7, 4);
 
-<strong>// Set point data { x: 11, y: 4 } at index 3 (with radius)</strong>
+<strong>// Set point data { x: 11, y: 4 } at index 3</strong>
 myChart.datasets[0].setPointData(3, 11, 4);
 
-<strong>// Set point data { x: 11, y: 4, r: 2 } at index 3</strong>
+<strong>// Set point data { x: 11, y: 4, r: 2 } at index 3 (with radius)</strong>
 myChart.datasets[0].setPointData(3, 11, 4, 2);
 
 <strong>// Remove the point at index 0</strong>
@@ -456,7 +456,7 @@ myChart.update();
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="Chart.Core.min.js"></script>
-	<script src="Chart.Scatter.js"></script>
+	<script src="Chart.Scatter.min.js"></script>
 
 	<script>
 
