add npm example

--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@ bower install Chart.Scatter.js --save
 </pre>
 				</p>
 				<p>
+					... or npm:
+					<pre>
+npm i chart.js-scatter						
+</pre>
+				</p>
+				<p>
 					To create a chart, we need to instantiate the Chart class. To do this, we
 					need to pass in the 2d context of where we want to draw the chart. Here's an 
 					example.
